Blocking objects, opening and closing changesets